Using http client for jersey and mapserver